--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "akf-conventional-commits",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Skeleton of Conventional Commits",
   "main": "index.js",
   "scripts": {
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/andyfarmerTUISHG/akf-conventional-commits#readme",
   "devDependencies": {
     "standard-version": "^7.1.0"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.3"
   }
 }
